--- a/package.json
+++ b/package.json
@@ -29,5 +29,6 @@
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1",
     "webpack-node-externals": "^1.7.2"
-  }
+  },
+  "types": "types"
 }
